# rs-autoclicker

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  key.rs  main.rs
