[package]
name = "autoclicker"
description = ""
version = "0.1.0"
authors = ["Alexander Sagen <alexander@sagen.me>"]
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
crossbeam-channel = "0.5"
rdev = "0.5"